Time and Date Display and other small styling adjustments

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
   <body>
     <header class="jumbotron">
-      <h1 class="display-3">Daily Work Planner</h1>
-      <p class="lead description">Schedule your work day and your 5 key goals</p>
-      <p class="time-block">Display the time</p>
-      <p id="currentDay" class="lead">Display the Day</p>
+      <h1 class="unique-display">Daily Work Planner</h1>
+      <p class="description">Schedule your work day & 5 key goals</p>
+      <p id="currentDay"></p>
+      <p id="currentDate"></p>
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
