idk some crap i tried

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <!--Table Headers-->
         <thead>
           <tr>
-            <th scope="col" width="20%" class="time-block"><div>Time</div></th>
+            <th scope="col" width="20%" class="center"><div>Time</div></th>
             <th scope="col" width="70%"><div>Event</div></th>
-            <th scope="col" width="10%" class="time-block"><div>Save</div></th>
+            <th scope="col" width="10%" class="center"><div>Save</div></th>
           </tr>
         </thead>
         <!--9AM-->
@@ -45,7 +45,7 @@
           <tr>
             <th class="align-middle time-block">9 AM</th>
             <td>
-              <textarea class="form-control" id="na" rows="1"></textarea>
+              <textarea class="form-control" rows="1"></textarea>
             </td>
             <td class="align-middle saveBtn">
               <i class="fas fa-save"></i>
@@ -57,7 +57,7 @@
           <tr>
             <th class="align-middle time-block">10 AM</th>
             <td>
-              <textarea class="form-control" id="na" rows="1"></textarea>
+              <textarea class="form-control" rows="1"></textarea>
             </td>
             <td class="align-middle saveBtn">
               <i class="fas fa-save"></i>
@@ -69,7 +69,7 @@
           <tr>
             <th class="align-middle time-block">11 AM</th>
             <td>
-              <textarea class="form-control" id="na" rows="1"></textarea>
+              <textarea class="form-control" rows="1"></textarea>
             </td>
             <td class="align-middle saveBtn">
               <i class="fas fa-save"></i>
@@ -81,7 +81,7 @@
           <tr>
             <th class="align-middle time-block">12 PM</th>
             <td>
-              <textarea class="form-control" id="na" rows="1"></textarea>
+              <textarea class="form-control"" rows="1"></textarea>
             </td>
             <td class="align-middle saveBtn">
               <i class="fas fa-save"></i>
@@ -93,7 +93,7 @@
           <tr>
             <th class="align-middle time-block">1 PM</th>
             <td>
-              <textarea class="form-control" id="na" rows="1"></textarea>
+              <textarea class="form-control" rows="1"></textarea>
             </td>
             <td class="align-middle saveBtn">
               <i class="fas fa-save"></i>
@@ -105,7 +105,7 @@
           <tr>
             <th class="align-middle time-block">2 PM</th>
             <td>
-              <textarea class="form-control" id="na" rows="1"></textarea>
+              <textarea class="form-control" rows="1"></textarea>
             </td>
             <td class="align-middle saveBtn">
               <i class="fas fa-save"></i>
@@ -117,7 +117,7 @@
           <tr>
             <th class="align-middle time-block">3 PM</th>
             <td>
-              <textarea class="form-control" id="na" rows="1"></textarea>
+              <textarea class="form-control" rows="1"></textarea>
             </td>
             <td class="align-middle saveBtn">
               <i class="fas fa-save"></i>
@@ -129,7 +129,7 @@
           <tr>
             <th class="align-middle time-block">4 PM</th>
             <td>
-              <textarea class="form-control" id="na" rows="1"></textarea>
+              <textarea class="form-control" rows="1"></textarea>
             </td>
             <td class="align-middle saveBtn">
               <i class="fas fa-save"></i>
@@ -141,7 +141,7 @@
           <tr>
             <th class="align-middle time-block">5 PM</th>
             <td>
-              <textarea class="form-control" id="na" rows="1"></textarea>
+              <textarea class="form-control"  rows="1"></textarea>
             </td>
             <td class="align-middle saveBtn">
               <i class="fas fa-save"></i>
@@ -154,13 +154,13 @@
       <table class="table table-center goals">
         <thead>
           <tr>
-            <th scope="col" width="20%" class="time-block"><i class="fas fa-check-square"></i></th>
+            <th scope="col" width="20%" class="center"><i class="fas fa-check-square"></i></th>
             <th scope="col" width="80%"><div>Goals</div></th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <th class="align-middle time-block">
+            <th class="align-middle center">
               <input type="checkbox" class="form-check-input">
             </th>
             <td>
