data attributes plus beginning of color coding rows

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <header class="jumbotron">
       <h1 class="unique-display">Daily Work Planner</h1>
-      <p class="description">Schedule your work day & 5 key goals</p>
+      <p class="description">Schedule your work day & top 5 goals</p>
       <p id="currentDay"></p>
       <p id="currentDate"></p>
     </header>
@@ -42,7 +42,7 @@
         </thead>
         <!--9AM-->
         <tbody>
-          <tr>
+          <tr class="table-row">
             <th class="align-middle time-block">9 AM</th>
             <td>
               <textarea class="form-control" rows="1"></textarea>
@@ -54,7 +54,7 @@
         </tbody>
         <!--10AM-->
         <tbody>
-          <tr>
+          <tr class="table-row">
             <th class="align-middle time-block">10 AM</th>
             <td>
               <textarea class="form-control" rows="1"></textarea>
@@ -66,7 +66,7 @@
         </tbody>
         <!--11AM-->
         <tbody>
-          <tr>
+          <tr class="table-row">
             <th class="align-middle time-block">11 AM</th>
             <td>
               <textarea class="form-control" rows="1"></textarea>
@@ -78,7 +78,7 @@
         </tbody>
         <!--12PM-->
         <tbody>
-          <tr>
+          <tr class="table-row">
             <th class="align-middle time-block">12 PM</th>
             <td>
               <textarea class="form-control"" rows="1"></textarea>
@@ -90,7 +90,7 @@
         </tbody>
         <!--1PM-->
         <tbody>
-          <tr>
+          <tr class="table-row">
             <th class="align-middle time-block">1 PM</th>
             <td>
               <textarea class="form-control" rows="1"></textarea>
@@ -102,7 +102,7 @@
         </tbody>
         <!--2PM-->
         <tbody>
-          <tr>
+          <tr class="table-row">
             <th class="align-middle time-block">2 PM</th>
             <td>
               <textarea class="form-control" rows="1"></textarea>
@@ -114,7 +114,7 @@
         </tbody>
         <!--3PM-->
         <tbody>
-          <tr>
+          <tr class="table-row">
             <th class="align-middle time-block">3 PM</th>
             <td>
               <textarea class="form-control" rows="1"></textarea>
@@ -126,7 +126,7 @@
         </tbody>
         <!--4PM-->
         <tbody>
-          <tr>
+          <tr class="table-row">
             <th class="align-middle time-block">4 PM</th>
             <td>
               <textarea class="form-control" rows="1"></textarea>
@@ -138,7 +138,7 @@
         </tbody>
         <!--5PM-->
         <tbody>
-          <tr>
+          <tr class="table-row">
             <th class="align-middle time-block">5 PM</th>
             <td>
               <textarea class="form-control"  rows="1"></textarea>
@@ -155,9 +155,49 @@
         <thead>
           <tr>
             <th scope="col" width="20%" class="center"><i class="fas fa-check-square"></i></th>
-            <th scope="col" width="80%"><div>Goals</div></th>
+            <th scope="col" width="80%"><div>Today's Top 5 Goals</div></th>
           </tr>
         </thead>
+        <tbody>
+          <tr>
+            <th class="align-middle center">
+              <input type="checkbox" class="form-check-input">
+            </th>
+            <td>
+              <textarea class="form-control" rows="1"></textarea>
+            </td>
+          </tr>
+        </tbody>
+        <tbody>
+          <tr>
+            <th class="align-middle center">
+              <input type="checkbox" class="form-check-input">
+            </th>
+            <td>
+              <textarea class="form-control" rows="1"></textarea>
+            </td>
+          </tr>
+        </tbody>
+        <tbody>
+          <tr>
+            <th class="align-middle center">
+              <input type="checkbox" class="form-check-input">
+            </th>
+            <td>
+              <textarea class="form-control" rows="1"></textarea>
+            </td>
+          </tr>
+        </tbody>
+        <tbody>
+          <tr>
+            <th class="align-middle center">
+              <input type="checkbox" class="form-check-input">
+            </th>
+            <td>
+              <textarea class="form-control" rows="1"></textarea>
+            </td>
+          </tr>
+        </tbody>
         <tbody>
           <tr>
             <th class="align-middle center">
