stop making it harder than it is!

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <header class="jumbotron">
       <h1 class="unique-display">Daily Work Planner</h1>
-      <p class="description">Schedule your work day & top 5 goals</p>
+      <p class="description">Schedule your work day</p>
       <p id="currentDay"></p>
       <p id="currentDate"></p>
     </header>
@@ -148,67 +148,6 @@
             </td>
           </tr>
         </tbody>
-      </table>
-      <hr>
-      <!--Goals Table-->
-      <table class="table table-center goals">
-        <thead>
-          <tr>
-            <th scope="col" width="20%" class="center"><i class="fas fa-check-square"></i></th>
-            <th scope="col" width="80%"><div>Today's Top 5 Goals</div></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th class="align-middle center">
-              <input type="checkbox" class="form-check-input">
-            </th>
-            <td>
-              <textarea class="form-control" rows="1"></textarea>
-            </td>
-          </tr>
-        </tbody>
-        <tbody>
-          <tr>
-            <th class="align-middle center">
-              <input type="checkbox" class="form-check-input">
-            </th>
-            <td>
-              <textarea class="form-control" rows="1"></textarea>
-            </td>
-          </tr>
-        </tbody>
-        <tbody>
-          <tr>
-            <th class="align-middle center">
-              <input type="checkbox" class="form-check-input">
-            </th>
-            <td>
-              <textarea class="form-control" rows="1"></textarea>
-            </td>
-          </tr>
-        </tbody>
-        <tbody>
-          <tr>
-            <th class="align-middle center">
-              <input type="checkbox" class="form-check-input">
-            </th>
-            <td>
-              <textarea class="form-control" rows="1"></textarea>
-            </td>
-          </tr>
-        </tbody>
-        <tbody>
-          <tr>
-            <th class="align-middle center">
-              <input type="checkbox" class="form-check-input">
-            </th>
-            <td>
-              <textarea class="form-control" rows="1"></textarea>
-            </td>
-          </tr>
-        </tbody>
-        
       </table>
     </div>
     <!--JQuery Script-->
