--- a/index.html
+++ b/index.html
@@ -4,29 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!--Link to Bootstrap-->
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
+    <!-- Link to Font Awesome resource for save button-->
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
+    <!--Google Fonts Link-->
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <!--CSS specific to this Web App-->
     <link rel="stylesheet" href="assets/style.css" />
-    <title>Work Day Scheduler</title>
+    <title>Daily Work Planner</title>
   </head>
 
   <body>
     <header class="jumbotron">
       <h1 class="unique-display">Daily Work Planner</h1>
       <p class="description">Schedule your work day</p>
+      <!--Display the Current Week Day-->
       <p id="currentDay"></p>
+      <!--Display the Current Date (I didn't include the time because stylistically I didn't like the time being displayed while the time blocks are also color coded. It felt redundant-->
       <p id="currentDate"></p>
     </header>
     <div class="container">
